// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`getInputs should correctly parse boolean inputs 1`] = `
{
  "apiUrl": "",
  "baseSha": "",
  "diffRelative": "false",
  "dirNames": "false",
  "dirNamesDeletedFilesIncludeOnlyDeletedDirs": "false",
  "dirNamesExcludeCurrentDir": "false",
  "dirNamesIncludeFiles": "",
  "dirNamesIncludeFilesSeparator": "",
  "escapeJson": false,
  "excludeSubmodules": "false",
  "failOnInitialDiffError": "false",
  "failOnSubmoduleDiffError": "false",
  "fetchAdditionalSubmoduleHistory": "false",
  "fetchMissingHistoryMaxRetries": 20,
  "files": "",
  "filesFromSourceFile": "",
  "filesFromSourceFileSeparator": "",
  "filesIgnore": "",
  "filesIgnoreFromSourceFile": "",
  "filesIgnoreFromSourceFileSeparator": "",
  "filesIgnoreSeparator": "",
  "filesIgnoreYaml": "",
  "filesIgnoreYamlFromSourceFile": "",
  "filesIgnoreYamlFromSourceFileSeparator": "",
  "filesSeparator": "",
  "filesYaml": "",
  "filesYamlFromSourceFile": "",
  "filesYamlFromSourceFileSeparator": "",
  "includeAllOldNewRenamedFiles": "false",
  "json": true,
  "negationPatternsFirst": "false",
  "oldNewFilesSeparator": " ",
  "oldNewSeparator": ",",
  "outputDir": "",
  "outputRenamedFilesAsDeletedAndAdded": "false",
  "path": ".",
  "quotepath": "false",
  "recoverDeletedFiles": "false",
  "recoverDeletedFilesToDestination": "",
  "recoverFiles": "",
  "recoverFilesIgnore": "",
  "recoverFilesIgnoreSeparator": "
",
  "recoverFilesSeparator": "
",
  "safeOutput": "false",
  "separator": "",
  "sha": "",
  "since": "",
  "sinceLastRemoteCommit": "false",
  "skipInitialFetch": "true",
  "tagsIgnorePattern": "",
  "tagsPattern": "*",
  "token": "",
  "until": "",
  "usePosixPathSeparator": "false",
  "useRestApi": "false",
  "writeOutputFiles": "false",
}
`;

exports[`getInputs should correctly parse numeric inputs 1`] = `
{
  "apiUrl": "",
  "baseSha": "",
  "diffRelative": true,
  "dirNames": false,
  "dirNamesDeletedFilesIncludeOnlyDeletedDirs": false,
  "dirNamesExcludeCurrentDir": false,
  "dirNamesIncludeFiles": "",
  "dirNamesIncludeFilesSeparator": "",
  "dirNamesMaxDepth": 2,
  "escapeJson": false,
  "excludeSubmodules": false,
  "failOnInitialDiffError": false,
  "failOnSubmoduleDiffError": false,
  "fetchAdditionalSubmoduleHistory": false,
  "fetchDepth": 5,
  "files": "",
  "filesFromSourceFile": "",
  "filesFromSourceFileSeparator": "",
  "filesIgnore": "",
  "filesIgnoreFromSourceFile": "",
  "filesIgnoreFromSourceFileSeparator": "",
  "filesIgnoreSeparator": "",
  "filesIgnoreYaml": "",
  "filesIgnoreYamlFromSourceFile": "",
  "filesIgnoreYamlFromSourceFileSeparator": "",
  "filesSeparator": "",
  "filesYaml": "",
  "filesYamlFromSourceFile": "",
  "filesYamlFromSourceFileSeparator": "",
  "includeAllOldNewRenamedFiles": false,
  "json": false,
  "negationPatternsFirst": false,
  "oldNewFilesSeparator": "",
  "oldNewSeparator": "",
  "outputDir": "",
  "outputRenamedFilesAsDeletedAndAdded": false,
  "path": "",
  "quotepath": true,
  "recoverDeletedFiles": false,
  "recoverDeletedFilesToDestination": "",
  "recoverFiles": "",
  "recoverFilesIgnore": "",
  "recoverFilesIgnoreSeparator": "",
  "recoverFilesSeparator": "",
  "safeOutput": false,
  "separator": "",
  "sha": "",
  "since": "",
  "sinceLastRemoteCommit": false,
  "skipInitialFetch": false,
  "tagsIgnorePattern": "",
  "tagsPattern": "",
  "token": "",
  "until": "",
  "usePosixPathSeparator": false,
  "useRestApi": false,
  "writeOutputFiles": false,
}
`;

exports[`getInputs should correctly parse string inputs 1`] = `
{
  "apiUrl": "https://api.github.com",
  "baseSha": "",
  "diffRelative": true,
  "dirNames": false,
  "dirNamesDeletedFilesIncludeOnlyDeletedDirs": false,
  "dirNamesExcludeCurrentDir": false,
  "dirNamesIncludeFiles": "",
  "dirNamesIncludeFilesSeparator": "",
  "escapeJson": false,
  "excludeSubmodules": false,
  "failOnInitialDiffError": false,
  "failOnSubmoduleDiffError": false,
  "fetchAdditionalSubmoduleHistory": false,
  "files": "",
  "filesFromSourceFile": "",
  "filesFromSourceFileSeparator": "",
  "filesIgnore": "",
  "filesIgnoreFromSourceFile": "",
  "filesIgnoreFromSourceFileSeparator": "",
  "filesIgnoreSeparator": "",
  "filesIgnoreYaml": "",
  "filesIgnoreYamlFromSourceFile": "",
  "filesIgnoreYamlFromSourceFileSeparator": "",
  "filesSeparator": "",
  "filesYaml": "",
  "filesYamlFromSourceFile": "",
  "filesYamlFromSourceFileSeparator": "",
  "includeAllOldNewRenamedFiles": false,
  "json": false,
  "negationPatternsFirst": false,
  "oldNewFilesSeparator": "",
  "oldNewSeparator": "",
  "outputDir": "",
  "outputRenamedFilesAsDeletedAndAdded": false,
  "path": "",
  "quotepath": true,
  "recoverDeletedFiles": false,
  "recoverDeletedFilesToDestination": "",
  "recoverFiles": "",
  "recoverFilesIgnore": "",
  "recoverFilesIgnoreSeparator": "",
  "recoverFilesSeparator": "",
  "safeOutput": false,
  "separator": "",
  "sha": "",
  "since": "",
  "sinceLastRemoteCommit": false,
  "skipInitialFetch": false,
  "tagsIgnorePattern": "",
  "tagsPattern": "",
  "token": "token",
  "until": "",
  "usePosixPathSeparator": false,
  "useRestApi": false,
  "writeOutputFiles": false,
}
`;

exports[`getInputs should handle invalid numeric inputs correctly 1`] = `
{
  "apiUrl": "",
  "baseSha": "",
  "diffRelative": true,
  "dirNames": false,
  "dirNamesDeletedFilesIncludeOnlyDeletedDirs": false,
  "dirNamesExcludeCurrentDir": false,
  "dirNamesIncludeFiles": "",
  "dirNamesIncludeFilesSeparator": "",
  "dirNamesMaxDepth": 2,
  "escapeJson": false,
  "excludeSubmodules": false,
  "failOnInitialDiffError": false,
  "failOnSubmoduleDiffError": false,
  "fetchAdditionalSubmoduleHistory": false,
  "fetchDepth": NaN,
  "files": "",
  "filesFromSourceFile": "",
  "filesFromSourceFileSeparator": "",
  "filesIgnore": "",
  "filesIgnoreFromSourceFile": "",
  "filesIgnoreFromSourceFileSeparator": "",
  "filesIgnoreSeparator": "",
  "filesIgnoreYaml": "",
  "filesIgnoreYamlFromSourceFile": "",
  "filesIgnoreYamlFromSourceFileSeparator": "",
  "filesSeparator": "",
  "filesYaml": "",
  "filesYamlFromSourceFile": "",
  "filesYamlFromSourceFileSeparator": "",
  "includeAllOldNewRenamedFiles": false,
  "json": false,
  "negationPatternsFirst": false,
  "oldNewFilesSeparator": "",
  "oldNewSeparator": "",
  "outputDir": "",
  "outputRenamedFilesAsDeletedAndAdded": false,
  "path": "",
  "quotepath": true,
  "recoverDeletedFiles": false,
  "recoverDeletedFilesToDestination": "",
  "recoverFiles": "",
  "recoverFilesIgnore": "",
  "recoverFilesIgnoreSeparator": "",
  "recoverFilesSeparator": "",
  "safeOutput": false,
  "separator": "",
  "sha": "",
  "since": "",
  "sinceLastRemoteCommit": false,
  "skipInitialFetch": false,
  "tagsIgnorePattern": "",
  "tagsPattern": "",
  "token": "",
  "until": "",
  "usePosixPathSeparator": false,
  "useRestApi": false,
  "writeOutputFiles": false,
}
`;

exports[`getInputs should handle negative numeric inputs correctly 1`] = `
{
  "apiUrl": "",
  "baseSha": "",
  "diffRelative": true,
  "dirNames": false,
  "dirNamesDeletedFilesIncludeOnlyDeletedDirs": false,
  "dirNamesExcludeCurrentDir": false,
  "dirNamesIncludeFiles": "",
  "dirNamesIncludeFilesSeparator": "",
  "dirNamesMaxDepth": -2,
  "escapeJson": false,
  "excludeSubmodules": false,
  "failOnInitialDiffError": false,
  "failOnSubmoduleDiffError": false,
  "fetchAdditionalSubmoduleHistory": false,
  "fetchDepth": 2,
  "files": "",
  "filesFromSourceFile": "",
  "filesFromSourceFileSeparator": "",
  "filesIgnore": "",
  "filesIgnoreFromSourceFile": "",
  "filesIgnoreFromSourceFileSeparator": "",
  "filesIgnoreSeparator": "",
  "filesIgnoreYaml": "",
  "filesIgnoreYamlFromSourceFile": "",
  "filesIgnoreYamlFromSourceFileSeparator": "",
  "filesSeparator": "",
  "filesYaml": "",
  "filesYamlFromSourceFile": "",
  "filesYamlFromSourceFileSeparator": "",
  "includeAllOldNewRenamedFiles": false,
  "json": false,
  "negationPatternsFirst": false,
  "oldNewFilesSeparator": "",
  "oldNewSeparator": "",
  "outputDir": "",
  "outputRenamedFilesAsDeletedAndAdded": false,
  "path": "",
  "quotepath": true,
  "recoverDeletedFiles": false,
  "recoverDeletedFilesToDestination": "",
  "recoverFiles": "",
  "recoverFilesIgnore": "",
  "recoverFilesIgnoreSeparator": "",
  "recoverFilesSeparator": "",
  "safeOutput": false,
  "separator": "",
  "sha": "",
  "since": "",
  "sinceLastRemoteCommit": false,
  "skipInitialFetch": false,
  "tagsIgnorePattern": "",
  "tagsPattern": "",
  "token": "",
  "until": "",
  "usePosixPathSeparator": false,
  "useRestApi": false,
  "writeOutputFiles": false,
}
`;

exports[`getInputs should return default values when no inputs are provided 1`] = `
{
  "apiUrl": "",
  "baseSha": "",
  "diffRelative": true,
  "dirNames": false,
  "dirNamesDeletedFilesIncludeOnlyDeletedDirs": false,
  "dirNamesExcludeCurrentDir": false,
  "dirNamesIncludeFiles": "",
  "dirNamesIncludeFilesSeparator": "",
  "escapeJson": false,
  "excludeSubmodules": false,
  "failOnInitialDiffError": false,
  "failOnSubmoduleDiffError": false,
  "fetchAdditionalSubmoduleHistory": false,
  "fetchMissingHistoryMaxRetries": 20,
  "files": "",
  "filesFromSourceFile": "",
  "filesFromSourceFileSeparator": "",
  "filesIgnore": "",
  "filesIgnoreFromSourceFile": "",
  "filesIgnoreFromSourceFileSeparator": "",
  "filesIgnoreSeparator": "",
  "filesIgnoreYaml": "",
  "filesIgnoreYamlFromSourceFile": "",
  "filesIgnoreYamlFromSourceFileSeparator": "",
  "filesSeparator": "",
  "filesYaml": "",
  "filesYamlFromSourceFile": "",
  "filesYamlFromSourceFileSeparator": "",
  "includeAllOldNewRenamedFiles": false,
  "json": false,
  "negationPatternsFirst": false,
  "oldNewFilesSeparator": " ",
  "oldNewSeparator": ",",
  "outputDir": "",
  "outputRenamedFilesAsDeletedAndAdded": false,
  "path": ".",
  "quotepath": true,
  "recoverDeletedFiles": false,
  "recoverDeletedFilesToDestination": "",
  "recoverFiles": "",
  "recoverFilesIgnore": "",
  "recoverFilesIgnoreSeparator": "
",
  "recoverFilesSeparator": "
",
  "safeOutput": false,
  "separator": "",
  "sha": "",
  "since": "",
  "sinceLastRemoteCommit": false,
  "skipInitialFetch": false,
  "tagsIgnorePattern": "",
  "tagsPattern": "*",
  "token": "",
  "until": "",
  "usePosixPathSeparator": false,
  "useRestApi": false,
  "writeOutputFiles": false,
}
`;
